--- a/calculadora.html
+++ b/calculadora.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora</title>
-  <link rel="stylesheet" href="calculadora.css">
+  <link rel="stylesheet" href="calculadora.cs">
 </head>
 <body>
 
@@ -16,17 +16,17 @@
       <button onclick="enviar('8')">8</button>
       <button onclick="enviar('9')">9</button>
       <button onclick="enviar('/')">÷</button>
-
+      <div>
       <button onclick="enviar('4')">4</button>
       <button onclick="enviar('5')">5</button>
       <button onclick="enviar('6')">6</button>
       <button onclick="enviar('*')">×</button>
-
+        </div>
       <button onclick="enviar('1')">1</button>
       <button onclick="enviar('2')">2</button>
       <button onclick="enviar('3')">3</button>
       <button onclick="enviar('-')">-</button>
-
+        <div>
       <button onclick="enviar('0')">0</button>
       <button onclick="enviar('.')">.</button>
       <button onclick="borrar()">C</button>
